packages/static_ecs/tests/compile_fail/fixtures/archetype_key_duplicate_type.zig
const static_ecs = @import("static_ecs");

comptime {
    _ = static_ecs.Entity;
}

const Position = struct { x: f32, y: f32 };
const Key = static_ecs.ArchetypeKey(.{ Position });
const key = Key.fromTypes(.{ Position, Position });

pub export const sentinel: u32 = key.count();
